# discordTranscriptionBot

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  main.py  pyproject.toml  shell.nix
.github/: copilot-instructions.md
src/: transcription_bot.py
