[project]
name = "discordtranscriptionbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord>=2.3.2",
    "fastapi>=0.115.14",
    "fastapi-cli>=0.0.7",
    "py-cord>=2.6.1",
    "pydantic>=2.11.7",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.1",
]
