[project]
name = "discordtranscriptionbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-ext-voice-recv>=0.5.2a179",
    "discord-py[voice]>=2.5.2",
    "fastapi>=0.115.14",
    "fastapi-cli>=0.0.7",
    "faster-whisper>=1.1.1",
    "pydantic>=2.11.7",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.1",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.3",
]
